@startuml TaskManagementSystem

!define PUBLIC + 
!define PRIVATE - 
!define PROTECTED # 
!define STATIC {static}

package "models" {
    abstract class User {
        PROTECTED String id
        PROTECTED String name
        PROTECTED String email
        PROTECTED String role
        PRIVATE STATIC int idCounter
        --
        + User(name, email, role)
        + String getId()
        + String getName()
        + String getEmail()
        + String getRole()
        + {abstract} void displayRole()
        + String toString()
    }

    class RegularUser {
        + RegularUser(name, email)
        + void displayRole()
    }

    class AdminUser {
        + AdminUser(name, email)
        + void displayRole()
    }

    abstract class Project {
        PUBLIC String id
        PUBLIC String name
        PUBLIC String description
        PUBLIC String type
        PUBLIC int teamSize
        PUBLIC double budget
        PUBLIC List<String> assignedUserIds
        PRIVATE STATIC int idCounter
        --
        + Project(name, description, type, teamSize, budget)
        + String getId()
        + String getType()
        + double getBudget()
        + {abstract} void displayAttributes()
        + void assignUser(userId)
        + void removeUser(userId)
        + List<String> getAssignedUserIds()
    }

    class SoftwareProject {
        PRIVATE String programmingLanguage
        --
        + SoftwareProject(name, description, type, teamSize, language, budget)
        + String getProgrammingLanguage()
        + void displayAttributes()
    }

    class HardwareProject {
        PRIVATE String hardwareType
        --
        + HardwareProject(name, description, type, teamSize, hardwareType, budget)
        + String getHardwareType()
        + void displayAttributes()
    }

    class Task {
        PRIVATE String taskName
        PRIVATE String taskId
        PRIVATE String taskStatus
        PRIVATE String projectId
        PRIVATE String assignedUserId
        PRIVATE STATIC int idCounter
        --
        + Task(taskName, taskStatus, projectId)
        + Task(taskName, taskStatus, projectId, assignedUserId)
        + void setTaskStatus(status)
        + String getTaskName()
        + String getTaskId()
        + String getTaskStatus()
        + String getProjectId()
        + String getAssignedUserId()
        + void setAssignedUserId(userId)
    }

    class ProjectStatusReportDto {
        PUBLIC String projectId
        PUBLIC String projectName
        PUBLIC int Tasks
        PUBLIC int Completed
        --
        + ProjectStatusReportDto(projectId, projectName, Tasks, Completed)
    }

    User <|-- RegularUser
    User <|-- AdminUser
    Project <|-- SoftwareProject
    Project <|-- HardwareProject
}

package "services" {
    class UserService {
        PRIVATE List<User> users
        PRIVATE User currentUser
        --
        + UserService()
        + User createRegularUser(name, email)
        + User createAdminUser(name, email)
        + User login(userId)
        + void logout()
        + User getCurrentUser()
        + List<User> getAllUsers()
        + User getUserById(userId)
        + void displayCurrentUser()
    }

    class ProjectService {
        PUBLIC List<Project> projectsRepository
        TaskService taskService
        --
        + ProjectService()
        + void addProject(project)
        + List<Project> getAllProjects()
        + String filterProjectByType(type)
        + void displayAllProjects()
        + String searchByBudgetRange(min, max)
        + Project getProjectById(id)
        + List<ProjectStatusReportDto> getProjectStatusReport(taskService)
        + double calculateAverageProjectStatusReport(taskService)
        + boolean assignUserToProject(projectId, userId)
        + boolean removeUserFromProject(projectId, userId)
    }

    class TaskService {
        PRIVATE List<Task> tasks
        --
        + TaskService()
        + void addTask(task)
        + List<Task> getAllTasks()
        + Task getTaskById(taskId)
        + Task updateTaskStatus(taskId, taskStatus)
        + void deleteTask(taskId)
        + List<Task> getTasksByProjectId(projectId)
        + double calculateCompletionRate(projectId)
    }

    class ReportService {
        PRIVATE ProjectService projectService
        PRIVATE TaskService taskService
        --
        + ReportService(projectService, taskService)
        + List<ProjectStatusReportDto> getProjectStatusReport()
        + double calculateAverageProjectStatusReport()
    }
}

package "utils" {
    class ConsoleMenu {
        PRIVATE STATIC ProjectService projectService
        PRIVATE STATIC TaskService taskService
        PRIVATE STATIC ReportService reportService
        PRIVATE STATIC UserService userService
        STATIC Scanner scanner
        --
        + void setProjectService(service)
        + void setTaskService(service)
        + void setReportService(service)
        + void setUserService(service)
        + String createProjectInteractive()
        + void printingTitle(title)
        + void mainMenu()
        + void returnToMain()
        + void projectCatalog()
        + void displayProjects(projects)
        + void displayProjectTaks(tasks)
        + void displayProjectDetails(id)
        + void addingNewTaskMenu()
        + void updatingTask()
        + void removingTask()
        + void initialLoginMenu()
        + void signUpMenu()
        + void switchUserMenu()
        + void loginUserMenu()
        + void taskMainMenu()
        + void printProjectStatusReporting()
        + void TestingUserMenu()
    }

    class ValidationUtils {
        PRIVATE STATIC Set<String> VALID_TASK_STATUSES
        PRIVATE STATIC Set<String> VALID_PROJECT_TYPES
        PRIVATE STATIC Set<String> VALID_USER_ROLES
        PRIVATE STATIC Pattern EMAIL_PATTERN
        --
        + boolean validateTaskStatus(status)
        + boolean validateProjectType(type)
        + boolean validateEmail(email)
        + boolean validateTeamSize(teamSize)
        + boolean validateBudget(budget)
        + boolean validateBudgetRange(min, max)
        + boolean validateUserRole(role)
        + boolean hasText(value)
    }
}

' Relationships - Inheritance
User <|-- RegularUser
User <|-- AdminUser
Project <|-- SoftwareProject
Project <|-- HardwareProject

' Relationships - Composition/Aggregation
UserService "1" *-- "0..*" User : manages
ProjectService "1" *-- "0..*" Project : manages
ProjectService "1" *-- "1" TaskService : uses
TaskService "1" *-- "0..*" Task : manages
ReportService "1" *-- "1" ProjectService : uses
ReportService "1" *-- "1" TaskService : uses

' Relationships - Association
Task "0..1" --> "1" Project : belongs to
Task "0..1" --> "1" User : assigned to
Project "0..*" --> "0..*" User : assigned users
ConsoleMenu ..> UserService : uses
ConsoleMenu ..> ProjectService : uses
ConsoleMenu ..> TaskService : uses
ConsoleMenu ..> ReportService : uses
ConsoleMenu ..> ValidationUtils : uses
ProjectService ..> ProjectStatusReportDto : returns
ReportService ..> ProjectStatusReportDto : returns

@enduml

